syntax = "proto3";

package manager.v1;

option go_package = "github.com/dezh-tech/immortal/infrastructure/grpc_client";

service ServiceRegistry {
    rpc RegisterService (RegisterServiceRequest) returns (RegisterServiceResponse);
}

message RegisterServiceRequest {
    string port = 1;
    string url = 2;
    uint32 heartbeat_duration_in_sec = 3;
    ServiceTypeEnum type = 4;
    string region = 5;
}

message RegisterServiceResponse {
    bool success = 1;
    optional string message = 2;
    string token = 3;
}

enum ServiceTypeEnum {
    UNKNOWN = 0;
    RELAY = 1;
    NIP05 = 2;
}
